libdrm (2.4.37-1) UNRELEASED; urgency=low

  [ Maarten Lankhorst ]
  * New upstream release.
  * Add libdrm-2.4.37-nouveau-1.patch
    - Allows building libdrm_nouveau.so.1 and 2 simultaneously

 -- Maarten Lankhorst <maarten.lankhorst@canonical.com>  Tue, 03 Jul 2012 10:34:04 +0200

libdrm (2.4.33-3) unstable; urgency=low

  * Add missing dependency on libdrm-omap1 to libdrm-dev (thanks, Robert
    Hooker!).  Make some arm matching a bit simpler.

 -- Julien Cristau <jcristau@debian.org>  Thu, 21 Jun 2012 23:22:22 +0200

libdrm (2.4.33-2) unstable; urgency=low

  [ Sebastian Reichel ]
  * Build libdrm_omap (closes: #667572).

 -- Julien Cristau <jcristau@debian.org>  Thu, 21 Jun 2012 22:39:22 +0200

libdrm (2.4.33-1) unstable; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 02 Apr 2012 01:28:22 +0000

libdrm (2.4.32-1) unstable; urgency=low

  [ Robert Hooker ]
  * New upstream release (2.4.31).
  * Bump libdrm2 and libdrm-radeon1 symbols and shlibs to account for
    recent changes.

  [ Cyril Brulebois ]
  * New upstream release (2.4.32).
  * Bump libdrm-intel1's symbols and shlibs accordingly.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 19 Mar 2012 19:56:12 +0000

libdrm (2.4.30-1) unstable; urgency=low

  * New upstream release.
  * Bump libdrm2's and libdrm-intel1's symbols and shlibs accordingly.
  * Document the symlink dance when building from git in README.source.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 06 Jan 2012 20:04:37 +0100

libdrm (2.4.29-1) unstable; urgency=low

  * New upstream release:
    - assert()s are now gone (Closes: #651316).
  * Update libdrm-intel1's symbols and shlibs accordingly.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 13 Dec 2011 13:16:22 +0100

libdrm (2.4.28-1) unstable; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 06 Dec 2011 15:17:50 +0100

libdrm (2.4.27-1) unstable; urgency=low

  * New upstream release: