@@ -1,0 +1,1 @@
+usr/lib/*/libdrm_nouveau.so.2*
