@@ -1,0 +1,41 @@
+libdrm_nouveau.so.2 libdrm-nouveau2 #MINVER#
+ abi16_bo_info@Base 2.4.34
+ abi16_bo_init@Base 2.4.34
+ abi16_chan_nv04@Base 2.4.34
+ abi16_chan_nvc0@Base 2.4.34
+ abi16_engobj@Base 2.4.34
+ abi16_ntfy@Base 2.4.34
+ nouveau_bo_map@Base 2.4.34
+ nouveau_bo_name_get@Base 2.4.34
+ nouveau_bo_name_ref@Base 2.4.34
+ nouveau_bo_new@Base 2.4.34
+ nouveau_bo_ref@Base 2.4.34
+ nouveau_bo_wait@Base 2.4.34
+ nouveau_bo_wrap@Base 2.4.34
+ nouveau_bufctx_del@Base 2.4.34
+ nouveau_bufctx_mthd@Base 2.4.34
+ nouveau_bufctx_new@Base 2.4.34
+ nouveau_bufctx_refn@Base 2.4.34
+ nouveau_bufctx_reset@Base 2.4.34
+ nouveau_client_del@Base 2.4.34
+ nouveau_client_new@Base 2.4.34
+ nouveau_debug@Base 2.4.34
+ nouveau_device_del@Base 2.4.34
+ nouveau_device_open@Base 2.4.34
+ nouveau_device_open_existing@Base 2.4.34
+ nouveau_device_wrap@Base 2.4.34
+ nouveau_getparam@Base 2.4.34
+ nouveau_object_del@Base 2.4.34
+ nouveau_object_find@Base 2.4.34
+ nouveau_object_new@Base 2.4.34
+ nouveau_pushbuf_bufctx@Base 2.4.34
+ nouveau_pushbuf_data@Base 2.4.34
+ nouveau_pushbuf_del@Base 2.4.34
+ nouveau_pushbuf_kick@Base 2.4.34
+ nouveau_pushbuf_new@Base 2.4.34
+ nouveau_pushbuf_refd@Base 2.4.34
+ nouveau_pushbuf_refn@Base 2.4.34
+ nouveau_pushbuf_reloc@Base 2.4.34
+ nouveau_pushbuf_space@Base 2.4.34
+ nouveau_pushbuf_validate@Base 2.4.34
+ nouveau_setparam@Base 2.4.34
