@@ -66,6 +66,12 @@ override_dh_auto_install:
 
 override_dh_install:
 	find debian/tmp -name '*.la' -delete
+	# Temporary rules for libdrm_nouveau1a
+	rm debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libdrm_nouveau.a
+	ln -s libdrm_nouveau.so.1 \
+		debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libdrm_nouveau1.so
+	ln -sf libdrm_nouveau.so.2 \
+		debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libdrm_nouveau.so
 	dh_install --fail-missing
 
 override_dh_strip:
